// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventAction:drawer 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget amis-Drawer amis-Drawer--right amis-Drawer--md amis-Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="amis-Drawer-overlay in"
    />
    <div
      class="amis-Drawer-content in"
    >
      <a
        class="amis-Drawer-close"
      >
        <icon-mock
          classname="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="amis-Drawer-header"
      >
        <div
          class="amis-Drawer-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              模态抽屉
            </span>
          </span>
        </div>
      </div>
      <div
        class="amis-Drawer-body"
      >
        <div
          class="amis-Spinner-overlay in"
        />
        <div
          class="amis-Spinner amis-Spinner--overlay in"
          data-testid="spinner"
        >
          <div
            class="amis-Spinner-icon amis-Spinner-icon--lg amis-Spinner-icon--default"
          />
        </div>
      </div>
      <div
        class="amis-Drawer-footer"
      >
        <button
          class="amis-Button amis-Button--default amis-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="amis-Button amis-Button--primary amis-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 3`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 4`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 5`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 6`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 7`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget amis-Drawer amis-Drawer--right amis-Drawer--md amis-Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="amis-Drawer-overlay in"
    />
    <div
      class="amis-Drawer-content in"
    >
      <a
        class="amis-Drawer-close"
      >
        <icon-mock
          classname="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="amis-Drawer-header"
      >
        <div
          class="amis-Drawer-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              模态抽屉
            </span>
          </span>
        </div>
      </div>
      <div
        class="amis-Drawer-body"
      >
        <div
          class="amis-Spinner-overlay in"
        />
        <div
          class="amis-Spinner amis-Spinner--overlay in"
          data-testid="spinner"
        >
          <div
            class="amis-Spinner-icon amis-Spinner-icon--lg amis-Spinner-icon--default"
          />
        </div>
      </div>
      <div
        class="amis-Drawer-footer"
      >
        <button
          class="amis-Button amis-Button--default amis-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="amis-Button amis-Button--primary amis-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 3`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 4`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 5`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 6`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 7`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                打开抽屉
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
